--- a/research.html
+++ b/research.html
@@ -341,13 +341,13 @@
 
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
-          <li><a href="mailto:surabhi.s.nath@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x" style="color:blue"></i></a></li>
-          <li><a href="https://twitter.com/surabhisnath" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
-          <li><a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
-          <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
-          <li><a href="https://www.researchgate.net/profile/Surabhi_Nath" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li>
-          <li><a href="https://soundcloud.com/surabhisnath" target="_blank"><i class="fab fa-soundcloud fa-2x"></i></a></li>
+          <li><a href="mailto:surabhi.s.nath@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x" style="color:#2596be"></i></a></li>
+          <li><a href="https://twitter.com/surabhisnath" target="_blank"><i class="fab fa-twitter fa-2x" style="color:#2596be"></i></a></li>
+          <li><a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x" style="color:#2596be"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x" style="color:#2596be"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x" style="color:#2596be"></i></a></li>
+          <li><a href="https://www.researchgate.net/profile/Surabhi_Nath" target="_blank"><i class="fab fa-researchgate fa-2x" style="color:#2596be"></i></a></li>
+          <li><a href="https://soundcloud.com/surabhisnath" target="_blank"><i class="fab fa-soundcloud fa-2x" style="color:#2596be"></i></a></li>
         </ul>
 
       </div>
