--- a/publications.html
+++ b/publications.html
@@ -121,13 +121,12 @@
                <li align="justify"><a href="https://dl.acm.org/doi/abs/10.1145/3297001.3297040" target="_blank"><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280).</a></li>
             </ul>
             
-<!--             <!-- Dissertation abstract -->
-            <h3 class="push-down-3"><span>Masters Thesis</span></h3>
-            <p><b>Title</b>: Fun meets Aesthetics: Human Curiosity and Creativity in Grids with Visual Patterns</p>
-            <p><b>Advisors</b>: <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Prof. Dr. Peter Dayan</a>, <a href="https://www.kyb.tuebingen.mpg.de/person/58620/2549" target="_blank">Dr. Aenne Brielmann</a></p>
+            <!-- Dissertation abstract -->
+            <!-- <h3 class="push-down-3"><span>Masters Thesis</span></h3> -->
+            <!-- <p><b>Title</b>: Fun meets Aesthetics: Human Curiosity and Creativity in Grids with Visual Patterns</p> -->
+            <!-- <p><b>Advisors</b>: <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Prof. Dr. Peter Dayan</a>, <a href="https://www.kyb.tuebingen.mpg.de/person/58620/2549" target="_blank">Dr. Aenne Brielmann</a></p> -->
             <!-- Sample quote from the dissertation -->
-            <blockquote align="justify">
-            </blockquote> -->
+            <!-- <blockquote align="justify"></blockquote> -->
 
             <!-- Dissertation abstract -->
             <h3 class="push-down-3"><span>B. Tech. Project</span></h3>
