--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
         
         <ul id="news">
           <li align="justify">
+            March 2022: Attended and volunteered at COSYNE 2022, Portugal<br>
+          </li>
+          <li align="justify">
             October 2021: Joined MPI for Biological Cybernetics, Tübingen<br>
           </li>
           <li align="justify">
