--- a/publications.html
+++ b/publications.html
@@ -122,20 +122,27 @@
             </ul>
             
             <!-- Dissertation abstract -->
-            <!-- <h3 class="push-down-3"><span>Masters Thesis</span></h3> -->
-            <!-- <p><b>Title</b>: Fun meets Aesthetics: Human Curiosity and Creativity in Grids with Visual Patterns</p> -->
-            <!-- <p><b>Advisors</b>: <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Prof. Dr. Peter Dayan</a>, <a href="https://www.kyb.tuebingen.mpg.de/person/58620/2549" target="_blank">Dr. Aenne Brielmann</a></p> -->
+            <h3 class="push-down-3"><span>Masters Thesis</span></h3>
+            <p><b>Title</b>: Fun Meets Aesthetics: Modelling Human Curiosity and Creativity</p>
+            <p><b>Advisors</b>: <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Prof. Dr. Peter Dayan</a>, <a href="https://www.kyb.tuebingen.mpg.de/person/58620/2549" target="_blank">Dr. Aenne Brielmann</a></p>
             <!-- Sample quote from the dissertation -->
-            <!-- <blockquote align="justify"></blockquote> -->
+            <blockquote align="justify">Complexity has emerged as an important factor driving both aesthetic evaluation and curiosity. In this thesis we present one of the first behavioural studies linking the fields of aesthetics and curiosity through the lens of visual complexity. We generated diverse, controlled, black-and-white pixel-grid patterns using cellular-automata (CA) and recorded subjective complexity evaluations on them. We found that computable objective complexity measures of spatial complexity (SC) and a novel intricacy measure were effective predictors of subjective complexity. These results generalised to larger and semi-revealed CA patterns where SC and intricacy of both the ``visible pattern'' (the semi-revealed pattern as it is seen) and the ``underlying pattern'' (the actual complete pattern underlying the semi-revealed version) together predicted subjective complexity. This complexity metric operationalised subjective complexity which was then used to model curiosity and exploratory behaviour. Participants freely explored grids hiding underlying patterns where they could click on tiles to reveal parts of the underlying pattern. Visible complexity measures (visible SC and visible intricacy) were evaluated at each click. We performed two levels of analysis - one at click level, modelling participants' probabilities of moving on from a grid, and another at grid level, modelling the number of clicks a participant would make on a grid. Across both forms of analysis, we consistently found two two-way interactions explaining behaviour, namely, visible SC interacting with underlying SC, and visible intricacy interacting with underlying intricacy. While SC had a positive influence on exploratory behaviour, intricacy had a negative influence. By contrast, both SC and intricacy correlated positively with subjective complexity.  Inferences from these results are discussed. This work paves the way for further research at the intersection of curiosity and aesthetics, including creativity and pattern production behaviour.
+            </blockquote>
+            
+            <!-- Read More Button -- link to the dissertation -->
+            <p class="text-left">
+               <a id="link-to-docs" role="button" class="btn btn-default" href="https://drive.google.com/file/d/1j98TWhYapsaOGFqqiRRD3r1oJvByAzuv/view?usp=sharing" target="_blank">
+                  <i class="far fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; Read More
+               </a>
+            </p>
 
             <!-- Dissertation abstract -->
-            <h3 class="push-down-3"><span>B. Tech. Project</span></h3>
+            <h3 class="push-down-3"><span>Bachelor Thesis</span></h3>
             <p><b>Title</b>: Breast Cancer Detection on Mammograms using Deep Neural Networks</p>
             <p><b>Advisors</b>: <a href="https://www.cse.iitd.ac.in/~chetan/">Prof. Chetan Arora</a>, <a href="http://www.cse.iitd.ernet.in/~suban/">Prof. Subhasis Banerjee</a>, <a href="https://www.linkedin.com/in/krithika-rangarajan-65586039/">Dr. Krithika Rangarajan</a></p>
             <!-- Sample quote from the dissertation -->
             <blockquote align="justify">Breast cancer has become the most common form of cancer in Indian, recently having overtaken cervical cancer in urban cities. Immense research has been carried out on breast cancer and several automated machines for detection have been formed, however, they are far from perfection and medical assessments need more reliable services. Also, very little research has been performed on Indian datasets, which are significantly different than the available foreign resources. Indian breasts are more dense and hence differ in texture, lesion size and composition. Our works aims to reproduce the state of the art results reported by researchers using deep learning approaches to automate breast cancer detection and extend them to build deep learning breast cancer detection networks which are more specific to Indian breast types and alongside use metadata of age, breast density, past history and other available information to enable more accurate judgement and treatment. Working in close collaboration with a radiologist from AIIMS Delhi, our work develops alternative object detection frameworks, ensemble and transformer networks to improve and enhance both classification and detection of breast lesions. Various analysis technique have been applied to measure performance and conduct thorough investigation of our experiments.
             </blockquote>
-
 
             <!-- Read More Button -- link to the dissertation -->
             <p class="text-left">
