--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
         
         <ul id="news">
           <li align="justify">
+            June 2022: Abstract accepted at VSAC 2022<br>
+          </li>
+          <li align="justify">
+            June 2022: Submitted my Masters thesis "Fun Meets Aesthetics: Modelling Human Curiosity and Creativity"<br>
+          </li>
+          <li align="justify">
             March 2022: Attended and volunteered at COSYNE 2022, Portugal<br>
           </li>
           <li align="justify">
