--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="col-sm-4">
         <img class="center-block img img-responsive img-thumbnail" src="img/sur.JPG" alt="Surabhi S Nath">
 
-        <p id="title">Doctoral Student<br>
+        <p id="title">Doctoral dent<br>
           <span id="program">Max Planck School of Cognition</span>
         </p>
         
@@ -109,7 +109,7 @@
           <tbody>
             <tr>
               <td><i class="fas fa-map-marker-alt"></i></td>
-              <td>Tübingen, Germany</td>
+              <td>Tübingen, Germany</td><a href="CV.html">
             </tr>
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
