--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <tbody>
             <tr>
               <td><i class="fas fa-map-marker-alt"></i></td>
-              <td>Tübingen, Germany</td><a href="CV.html">
+              <td>Tübingen, Germany</td><a href="CV.html">inwhite</a>
             </tr>
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
