--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <tbody>
             <tr>
               <td><i class="fas fa-map-marker-alt"></i></td>
-              <td>Tübingen, Germany</td><a style="background-color:white; href="CV.html">vee</a>
+              <td>Tübingen, Germany</td>
             </tr>
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
