--- a/vee.html
+++ b/vee.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jane Smith, MS</title>
+  <title>My Man <3</title>
 
   <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
   <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -92,11 +92,7 @@
     <div class="row">
       <div class="col-sm-12">
 
-        <h1>Teaching</h1>
-
-        <blockquote>{SAMPLE/QUOTE FROM YOUR TEACHING PHILOSOPHY}
-          <cite title="source title">&mdash; Source/Author</cite>
-        </blockquote>
+        <h1>My Man <3</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque temporibus sit tempora rem. Pariatur dolore minima, corporis deserunt. Est doloribus, explicabo, porro obcaecati delectus culpa. Tempore ipsum earum, praesentium cum animi
           accusamus porro, repellat debitis assumenda. Voluptates voluptatibus accusamus dignissimos iure sunt, autem dolorum impedit.</p>
@@ -104,147 +100,6 @@
 
 
 
-        <h3 class="push-down-3"><span>Courses Taught</span></h3>
-
-        <p class='text-right'><span class="badge expander">show all</span></p>
-
-        <h4 class="push-down-3 gray"><em>University One</em></h4>
-
-        <div class="panel-group" id="University-1" role="tablist">
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-8752665301">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-8752665301" aria-expanded="false" aria-controls="collapse-8752665301">Course 1</a>
-              </h5>
-            </div>
-            <div id="collapse-8752665301" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-8752665301">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, accusantium doloribus! Sequi ad omnis facere illo, dignissimos vel officiis, architecto sit laborum labore, quidem cumque ipsam minima est cum eligendi.</div>
-            </div>
-          </div>
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-8774401">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-8774401" aria-expanded="false" aria-controls="collapse-8774401">Course 2</a>
-              </h5>
-            </div>
-            <div id="collapse-8774401" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-8774401">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim voluptatibus minus atque suscipit, labore eius, nostrum laboriosam! Minima labore, dicta voluptatum quaerat impedit perferendis? Omnis quidem ab voluptatem perferendis asperiores.</div>
-            </div>
-          </div>
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-5477158">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-5477158" aria-expanded="false" aria-controls="collapse-5477158">Course 3</a>
-              </h5>
-            </div>
-            <div id="collapse-5477158" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-5477158">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt velit dignissimos tempora esse, laudantium error nam corporis quos commodi maxime molestias consequuntur. Recusandae pariatur accusantium perspiciatis, nesciunt vitae minima itaque?</div>
-            </div>
-          </div>
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-9716944">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-9716944" aria-expanded="false" aria-controls="collapse-9716944">Course 4</a>
-              </h5>
-            </div>
-            <div id="collapse-9716944" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-9716944">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus animi nisi repellendus aut non aperiam iste nostrum enim porro, ea quaerat sed numquam cupiditate iusto praesentium, quia amet? Eaque, facere.</div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-4195490">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-4195490" aria-expanded="false" aria-controls="collapse-4195490">Course 5</a>
-              </h5>
-            </div>
-            <div id="collapse-4195490" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-4195490">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, distinctio velit molestias nobis inventore, similique debitis temporibus corporis quo dolore reiciendis. Pariatur suscipit, ullam fugiat fuga libero corrupti ab itaque!</div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-5764911">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-5764911" aria-expanded="false" aria-controls="collapse-5764911">Course 6</a>
-              </h5>
-            </div>
-            <div id="collapse-5764911" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-5764911">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi nisi voluptates minima hic unde ut voluptatibus consequuntur voluptatem quisquam asperiores, sequi suscipit dicta, dolor, temporibus animi veritatis. Modi, delectus, aut!</div>
-            </div>
-          </div>
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading-147620">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse-147620" aria-expanded="false" aria-controls="collapse-147620">Course 7</a>
-              </h5>
-            </div>
-            <div id="collapse-147620" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-147620">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint blanditiis, quia iusto, beatae suscipit nostrum. Et explicabo sed facere molestiae reiciendis! Perferendis consequatur dolores, placeat aliquid id dignissimos, excepturi deleniti.
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <h4 class="push-down-3 gray"><em>University Two</em></h4>
-
-        <div class="panel-group" id="university-2" role="tablist">
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading4574559">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse4574559" aria-expanded="false" aria-controls="collapse4574559">Course 1</a>
-              </h5>
-            </div>
-            <div id="collapse4574559" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4574559">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae mollitia ullam velit. Hic sint provident, eligendi quis est deserunt ex amet doloremque. Nam eaque, voluptatum numquam! Voluptatibus voluptate, placeat nobis!</div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading5428718">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse5428718" aria-expanded="false" aria-controls="collapse5428718">Course 2</a>
-              </h5>
-            </div>
-            <div id="collapse5428718" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5428718">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere repellendus iusto veritatis tempore molestiae aperiam ipsa ea corporis, facilis doloremque magnam nam qui inventore sint, a quis fugiat in illo.</div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading766918">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse766918" aria-expanded="false" aria-controls="collapse766918">Course 3</a>
-              </h5>
-            </div>
-            <div id="collapse766918" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading766918">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatum eaque aliquid cumque nisi molestias itaque eum provident placeat dolor molestiae, vero aut labore reiciendis quam et tempore voluptatibus beatae.
-              </div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading1025199">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse1025199" aria-expanded="false" aria-controls="collapse1025199">Course 4</a>
-              </h5>
-            </div>
-            <div id="collapse1025199" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1025199">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita molestias, beatae nisi illo dolor aperiam ex consequatur maiores delectus maxime labore quidem dicta praesentium, eveniet itaque enim blanditiis. Perspiciatis, nesciunt..</div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading9284651">
-              <h5 class="panel-title">
-                <a role="button" data-toggle="collapse" class="accordion-toggle accordion-plus-toggle collapsed" data-parent="" href="#collapse9284651" aria-expanded="false" aria-controls="collapse9284651">Course 5</a>
-              </h5>
-            </div>
-            <div id="collapse9284651" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading9284651">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque harum fuga impedit corporis cumque quos. Rem itaque repudiandae hic dolorem voluptas necessitatibus facere, aut, rerum autem quam iure illum amet.</div>
-            </div>
-          </div>
-        </div>
 
 
       </div>
