--- a/vee.html
+++ b/vee.html
@@ -94,9 +94,7 @@
 
         <h1>My Man</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque temporibus sit tempora rem. Pariatur dolore minima, corporis deserunt. Est doloribus, explicabo, porro obcaecati delectus culpa. Tempore ipsum earum, praesentium cum animi
-          accusamus porro, repellat debitis assumenda. Voluptates voluptatibus accusamus dignissimos iure sunt, autem dolorum impedit.</p>
-        <p>For more on my pedagogical approach, see my <a href="#" title="link to teaching philosophy" target="_blank">Teaching Philosophy</a>.</p>
+        <p>He makes me laugh and makes me cry</p>
 
 
 
