--- a/vee.html
+++ b/vee.html
@@ -95,6 +95,11 @@
         <h1>My Man</h1>
 
         <p>He makes me laugh and makes me cry</p>
+        <p>His smile can always impress.</p>
+        <p>He 
+        <p>Treats me like a princess</p>
+        <p>Happy 23rd to the . 
+        <p>Anything I say about him, will always be less.</p>
 
 
 
