--- a/vee.html
+++ b/vee.html
@@ -92,7 +92,10 @@
     <div class="row">
       <div class="col-sm-12">
 
-        <h1>My Man</h1>
+        <h1>Dreamer Inside: 911</h1>
+        
+        <img src="vee.jpg">
+
 
         <p>He makes me laugh and makes me cry</p>
         <p>His smile can always impress.</p>
