--- a/vee2.html
+++ b/vee2.html
@@ -94,7 +94,7 @@
 
         <h1>I Miss Shoe</h1>
         
-        <img src="shoe.jpg">
+        <img width="250" src="shoe.jpg">
 
 
         <p>He makes me laugh and makes me cry</p>
