--- a/vee2.html
+++ b/vee2.html
@@ -92,18 +92,17 @@
     <div class="row">
       <div class="col-sm-12">
 
-        <h1>I Miss Shoe</h1>
-        
-        <img width="250" src="shoe.jpg">
-        <br><br>
-
+        <h1>My Man</h1>
+        <i>
         <p>He makes me laugh and makes me cry</p>
         <p>His smile can always impress.</p>
-        <p>He 
+        <p>He loves a lot and cares the most 
         <p>Treats me like a princess</p>
-        <p>Happy 23rd to the . 
-        <p>Anything I say about him, will always be less.</p>
-
+        <p>Happy 23rd to my most favourite.
+        <p>Anything I say, will always be less.</p>
+        <p>Last 7 months have been the best and</p>
+        <p>I cannot wait for vee to unite with ess.</p>
+        </i>
 
 
 
