--- a/vee2.html
+++ b/vee2.html
@@ -73,6 +73,10 @@
         content: "\f067";
         color: RGBA(119, 136, 153, .5);
       }
+    
+      p {
+        font-size:15
+      }
 
       /* sets the link to the width of the entire panel title */
       .panel-title>a {
@@ -96,11 +100,11 @@
         <i>
         <p>He makes me laugh and makes me cry</p>
         <p>His smile can always impress.</p>
-        <p>He loves a lot and cares the most 
-        <p>Treats me like a princess</p>
-        <p>Happy 23rd to my most favourite.
+        <p>He loves a lot and cares the most, 
+        <p>Treats me like a princess.</p>
+        <p>Happy 23rd to my most favourite --
         <p>Anything I say, will always be less.</p>
-        <p>Last 7 months have been the best and</p>
+        <p>Last 7 months have been the best, and</p>
         <p>I cannot wait for vee to unite with ess.</p>
         </i>
 
