--- a/vee2.html
+++ b/vee2.html
@@ -73,10 +73,6 @@
         content: "\f067";
         color: RGBA(119, 136, 153, .5);
       }
-    
-      p {
-        font-size:15
-      }
 
       /* sets the link to the width of the entire panel title */
       .panel-title>a {
@@ -98,14 +94,14 @@
 
         <h1>My Man</h1>
         <i>
-        <p>He makes me laugh and makes me cry</p>
-        <p>His smile can always impress.</p>
-        <p>He loves a lot and cares the most, 
-        <p>Treats me like a princess.</p>
-        <p>Happy 23rd to my most favourite --
-        <p>Anything I say, will always be less.</p>
-        <p>Last 7 months have been the best, and</p>
-        <p>I cannot wait for vee to unite with ess.</p>
+        <p style="font-size:200%">He makes me laugh and makes me cry</p>
+        <p style="font-size:200%">His smile can always impress.</p>
+        <p style="font-size:200%">He loves a lot and cares the most, 
+        <p style="font-size:200%">Treats me like a princess.</p>
+        <p style="font-size:200%">Happy 23rd to my most favourite -
+        <p style="font-size:200%">Anything I say, will always be less.</p>
+        <p style="font-size:200%">Last 7 months have been the best, and</p>
+        <p style="font-size:200%">I cannot wait for Vee to unite with Ess.</p>
         </i>
 
 
