--- a/vee2.html
+++ b/vee2.html
@@ -94,14 +94,14 @@
 
         <h1>My Man</h1>
         <i>
-        <p style="font-size:150%">He makes me laugh and makes me cry</p>
-        <p style="font-size:150%">His smile can always impress.</p>
-        <p style="font-size:150%">He loves a lot and cares the most, 
-        <p style="font-size:150%">Treats me like a princess.</p>
-        <p style="font-size:150%">Happy 23rd to my most favourite -
-        <p style="font-size:150%">Anything I say, will always be less.</p>
-        <p style="font-size:150%">Last 7 months have been the best, and</p>
-        <p style="font-size:150%">I cannot wait for Vee to unite with Ess.</p>
+        <p style="font-size:1350%">He makes me laugh and makes me cry</p>
+        <p style="font-size:135%">His smile can always impress.</p>
+        <p style="font-size:135%">He loves a lot and cares the most, 
+        <p style="font-size:135%">Treats me like a princess.</p>
+        <p style="font-size:135%">Happy 23rd to my most favourite -
+        <p style="font-size:135%">Anything I say, will always be less.</p>
+        <p style="font-size:135%">Last 7 months have been the best, and</p>
+        <p style="font-size:135%">I can't wait for Vee to unite with Ess.</p>
         </i>
 
 
