--- a/vee.html
+++ b/vee.html
@@ -96,17 +96,9 @@
         
         <img src="vee.jpg">
 
-
-        <p>He makes me laugh and makes me cry</p>
-        <p>His smile can always impress.</p>
-        <p>He 
-        <p>Treats me like a princess</p>
-        <p>Happy 23rd to the . 
-        <p>Anything I say about him, will always be less.</p>
-
-
-
-
+        <form>
+          <input type="button" onclick="vee2.html" value="Next" />
+        </form>
 
       </div>
     </div>
