--- a/vee.html
+++ b/vee.html
@@ -95,10 +95,13 @@
         <h1>Dreamer Inside: 911</h1>
         
         <img src="vee.jpg">
-
+        <br><br>
+        <center>
         <form>
           <input type="button" onclick="vee2.html" value="Next" />
         </form>
+        </center>
+        <br><br>
 
       </div>
     </div>
