--- a/vee.html
+++ b/vee.html
@@ -98,7 +98,7 @@
         <br><br>
         <center>
         <form>
-          <input type="button" onclick="vee2.html" value="Next" />
+          <input type="button" "window.location.href='https://surabhisnath.github.io/vee2.html';" value="Next" />
         </form>
         </center>
         <br><br>
