--- a/vee.html
+++ b/vee.html
@@ -94,11 +94,11 @@
 
         <h1>Dreamer Inside: 911</h1>
         
-        <img src="vee.jpg">
+        <img width="70%" src="vee.jpg">
         <br><br>
         <center>
         <form>
-          <input type="button" "window.location.href='https://surabhisnath.github.io/vee2.html';" value="Next" />
+          <input type="button" onclick="window.location.href='https://surabhisnath.github.io/vee2.html';" value="Next" />
         </form>
         </center>
         <br><br>
