--- a/vee2.html
+++ b/vee2.html
@@ -103,6 +103,14 @@
         <p style="font-size:120%">Last 7 months have been the best, and</p>
         <p style="font-size:120%">I can't wait for Vee to unite with Ess.</p>
         </i>
+        
+        <br><br>
+        <center>
+        <form>
+          <input type="button" onclick="window.location.href='https://surabhisnath.github.io/vee.html';" value="Next" />
+        </form>
+        </center>
+        <br><br>
 
 
 
