--- a/vee2.html
+++ b/vee2.html
@@ -107,7 +107,7 @@
         <br><br>
         <center>
         <form>
-          <input type="button" onclick="window.location.href='https://surabhisnath.github.io/vee.html';" value="Next" />
+          <input type="button" onclick="window.location.href='https://surabhisnath.github.io/vee.html';" value="Back" />
         </form>
         </center>
         <br><br>
