--- a/vee.html
+++ b/vee.html
@@ -24,7 +24,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png"> -->
   <link rel="icon" href="https://github.com/surabhisnath/surabhisnath.github.io/blob/master/shoe.png">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="shoe.jpg">
+  <meta name="msapplication-TileImage" content="shoe.png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap CSS files-->
