--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="col-sm-8">
 
         <p align="justify">I am a doctoral student at the <a href="https://www.maxplanckschools.de/en/cognition" target="_blank">Max Planck School of Cognition</a> and the Max Planck Institute for Biological Cybernetics, where I work in the Department of <a href="https://www.kyb.tuebingen.mpg.de/computational-neuroscience" target="_blank">Computational Neuroscience</a> led by <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Dr. Peter Dayan</a>. I like to conduct human behavioural studies and use statistical/computational modelling and reinforcement learning to understand human curiosity and creativity. 
-        <p align="justify">Recently, I graduated from my Masters at Berlin School of Mind and Brain. For my Master thesis, under the guidance of Aenne Brielmann, I worked on developing a computational metric of complexity and using it to model exploratory behaviour in a pattern grid-search task.</p>
+        Recently, I completed my Masters from Berlin School of Mind and Brain, Humboldt University. For my Master thesis, under the guidance of Aenne Brielmann, I worked on developing a computational metric of complexity and using it to model exploratory behaviour in a pattern grid-search task.</p>
         <p align="justify">Apart from my research interests, I have learnt Hindustani Classical music for over 10 years and love singing. I also hold National scholarship for Kuchipudi dance. I enjoy watching tennis (huge Djokovic supporter) and used to actively participate in athletics in my school days! Recently, I have had fun trying out some calligraphy and voice acting.
 
         <div id="read-more">
@@ -155,13 +155,14 @@
           <li align="justify">
             Ph.D., 2020-present<br>
             <span class="university"><em>Max Planck School of Cognition</em></span>
+            <span class="university"><em>Max Planck Institute for Biological Cybernetics</em></span>
           </li>
           <li align="justify">
-            M.Sc., 2020-present<br>
+            M.Sc., 2020-2022<br>
             <span class="university"><em>Berlin School of Mind and Brain</em></span>
           </li>
           <li align="justify">
-            B.Tech. (Hons.) in Computer Science and Engineering with minor in Computational Biology, 2020<br>
+            B.Tech. (Hons.) in Computer Science and Engineering with minor in Computational Biology, 2016-2020<br>
             <span class="university"><em>IIIT Delhi</em></span>
           </li>
 
@@ -170,6 +171,12 @@
         <h3 class="push-down-3"><span>News</span></h3>
         
         <ul id="news">
+          <li align="justify">
+            September 2022: Began my PhD at MPI for Biological Cybernetics<br>
+          </li>
+          <li align="justify">
+            August 2022: Attended and presented at VSAC 2022<br>
+          </li>
           <li align="justify">
             June 2022: Abstract accepted at VSAC 2022<br>
           </li>
