--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           
           <li align="justify">
             Ph.D., 2020-present<br>
-            <span class="university"><em>Max Planck School of Cognition</em></span>
+            <span class="university"><em>Max Planck School of Cognition</em></span><br>
             <span class="university"><em>Max Planck Institute for Biological Cybernetics</em></span>
           </li>
           <li align="justify">
