--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
         
         <ul id="news">
           <li align="justify">
+            December 2022: Abstract accepted at TeaP 2023<br>
+          </li>
+          <li align="justify">
             September 2022: Began my PhD at MPI for Biological Cybernetics<br>
           </li>
           <li align="justify">
