--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
       </div>
       <div class="col-sm-8">
 
-        <p align="justify">I am a doctoral student at the <a href="https://www.maxplanckschools.de/en/cognition" target="_blank">Max Planck School of Cognition</a> and the Max Planck Institute for Biological Cybernetics, where I work in the Department of <a href="https://www.kyb.tuebingen.mpg.de/computational-neuroscience" target="_blank">Computational Neuroscience</a> led by <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Dr. Peter Dayan</a>. I like to conduct human behavioural studies and use statistical/computational modelling and reinforcement learning to understand human curiosity and creativity. 
+        <p align="justify">I am a doctoral student at the <a href="https://www.maxplanckschools.de/en/cognition" target="_blank">Max Planck School of Cognition</a> and the Max Planck Institute for Biological Cybernetics, where I work in the Department of <a href="https://www.kyb.tuebingen.mpg.de/computational-neuroscience" target="_blank">Computational Neuroscience</a> led by <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Dr. Peter Dayan</a>. I study higher-level human cognitive phenomena like aesthetic perception, curiosity and creativity using behavioural experiments and statistical/computational modelling. 
         <br><br>
-        Recently, I completed my Masters from Berlin School of Mind and Brain, Humboldt University. For my Master thesis, under the guidance of Aenne Brielmann, I worked on developing a computational metric of complexity and using it to model exploratory behaviour in a pattern grid-search task.</p>
+        I completed my Masters from Berlin School of Mind and Brain, Humboldt University. For my Master thesis, under the guidance of Aenne Brielmann, I worked in empirical aesthetics where we developed pixel patterns using cellular automata, developed a computational metric of complexity and used it to model exploratory behaviour in a grid-search task.</p>
+        Presently in my PhD, I am studying human evaluation of production of little-c creativity in pixel patterns from product and process perspectives.
         <p align="justify">Apart from my research interests, I have learnt Hindustani Classical music for over 10 years and love singing. I also hold National scholarship for Kuchipudi dance. I enjoy watching tennis (huge Djokovic supporter) and used to actively participate in athletics in my school days! Recently, I have had fun trying out some calligraphy and voice acting.
 
         <div id="read-more">
@@ -172,6 +173,18 @@
         <h3 class="push-down-3"><span>News</span></h3>
         
         <ul id="news">
+          <li align="justify">
+            June 2023: Presented at Creativity and Cognition Conference<br>
+          </li>
+          <li align="justify">
+            June 2023: Presented at UK Creativity Conference<br>
+          </li>
+          <li align="justify">
+            March 2023: Presented at TeaP 2023<br>
+          </li>
+          <li align="justify">
+            December 2022: Abstract accepted at TeaP 2023<br>
+          </li>
           <li align="justify">
             December 2022: Abstract accepted at TeaP 2023<br>
           </li>
