--- a/index.html
+++ b/index.html
@@ -154,13 +154,16 @@
         <ul id="education">
           
           <li align="justify">
-            Ph.D., 2020-present<br>
-            <span class="university"><em>Max Planck School of Cognition</em></span><br>
+            PhD, 2022-present<br>
             <span class="university"><em>Max Planck Institute for Biological Cybernetics</em></span>
           </li>
           <li align="justify">
             M.Sc., 2020-2022<br>
             <span class="university"><em>Berlin School of Mind and Brain</em></span>
+          </li>
+          <li align="justify">
+            M.Sc.-Ph.D., 2020-present<br>
+            <span class="university"><em>Max Planck School of Cognition</em></span><br>
           </li>
           <li align="justify">
             B.Tech. (Hons.) in Computer Science and Engineering with minor in Computational Biology, 2016-2020<br>
