--- a/research.html
+++ b/research.html
@@ -100,9 +100,9 @@
       <div class="row push-down-4" id="projects">
 
          <div class="col-sm-6 col-md-4">
-           <a href="pattern_setter.html" target="_blank">
+           <a href="https://kyblab.tuebingen.mpg.de/fma/pattern_maker/" target="_blank">
            <div class="panel panel-default">
-              <div class="panel-footer" align="center">Enjoyment in Grids with Visual Patterns</div>
+              <div class="panel-footer" align="center">Creativity in Pixel Patterns</div>
               <div class="panel-body"><img src="img/pattern.png" class="img img-responsive img-thumbnail">
               <!-- <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>-->  
             </div>
