--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
         
         <ul id="news">
           <li align="justify">
+            September 2023: Presented at IICCSSS, Tübingen<br>
+          </li>
+          <li align="justify">
             June 2023: Presented at Creativity and Cognition Conference<br>
           </li>
           <li align="justify">
