--- a/index.html
+++ b/index.html
@@ -176,31 +176,25 @@
         
         <ul id="news">
           <li align="justify">
-            September 2023: Presented at IICCSSS, Tübingen<br>
+            September 2023: Paper accepted at Psychology of Aesthetics, Creativity and the Arts<br>
           </li>
           <li align="justify">
-            June 2023: Presented at Creativity and Cognition Conference<br>
+            September 2023: Attended and presented at IICCSSS, Tübingen<br>
           </li>
           <li align="justify">
-            June 2023: Presented at UK Creativity Conference<br>
+            June 2023: Attended and presented at Creativity and Cognition Conference<br>
           </li>
           <li align="justify">
-            March 2023: Presented at TeaP 2023<br>
+            June 2023: Attended and presented at UK Creativity Conference<br>
           </li>
           <li align="justify">
-            December 2022: Abstract accepted at TeaP 2023<br>
-          </li>
-          <li align="justify">
-            December 2022: Abstract accepted at TeaP 2023<br>
+            March 2023: Attended and presented at TeaP 2023<br>
           </li>
           <li align="justify">
             September 2022: Began my PhD at MPI for Biological Cybernetics<br>
           </li>
           <li align="justify">
             August 2022: Attended and presented at VSAC 2022<br>
-          </li>
-          <li align="justify">
-            June 2022: Abstract accepted at VSAC 2022<br>
           </li>
           <li align="justify">
             June 2022: Submitted my Masters thesis "Fun Meets Aesthetics: Modelling Human Curiosity and Creativity"<br>
@@ -219,9 +213,6 @@
           </li>
           <li align="justify">
             July 2021: Attended CogSci 2021<br>  
-          </li>
-          <li align="justify">
-            July 2021: Abstract accepted for oral presentation at SPUDM 2021<br>
           </li>
         </ul>
 
