--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <p align="justify">I am a doctoral student at the <a href="https://www.maxplanckschools.de/en/cognition" target="_blank">Max Planck School of Cognition</a> and the Max Planck Institute for Biological Cybernetics, where I work in the Department of <a href="https://www.kyb.tuebingen.mpg.de/computational-neuroscience" target="_blank">Computational Neuroscience</a> led by <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Dr. Peter Dayan</a>. I study higher-level human cognitive phenomena like aesthetic perception, curiosity and creativity using behavioural experiments and statistical/computational modelling. 
         <br><br>
-        I completed my Masters from Berlin School of Mind and Brain, Humboldt University. For my Master thesis, under the guidance of Aenne Brielmann, I worked in empirical aesthetics where we developed pixel patterns using cellular automata, developed a computational metric of complexity and used it to model exploratory behaviour in a grid-search task.<br><br>Presently in my PhD, I am studying human evaluation and production of little-c creativity in pixel patterns from product and process perspectives.</p>
+        I completed my Masters from Berlin School of Mind and Brain, Humboldt University. For my Master thesis, under the guidance of Aenne Brielmann, I worked in empirical aesthetics where we developed pixel patterns using cellular automata, developed a computational metric of complexity and used it to model exploratory behaviour in a grid-search task.<br><br>Presently in my PhD, I am studying human evaluation and production of little-c creativity from product and process perspectives.</p>
         <p align="justify">Apart from my research interests, I have learnt Hindustani Classical music for over 10 years and love singing. I also hold National scholarship for Kuchipudi dance. I enjoy watching tennis (huge Djokovic supporter) and used to actively participate in athletics in my school days! Recently, I have had fun trying out some calligraphy and voice acting.
 
         <div id="read-more">
@@ -176,6 +176,15 @@
         
         <ul id="news">
           <li align="justify">
+            June 2024: Invited talk at IAEA 2024!<br>
+          </li>
+          <li align="justify">
+            June 2024: Paper accepted at ICCC 2024<br>
+          </li>
+          <li align="justify">
+            April 2024: Paper accepted at CogSci 2024 and ICLR Workshop 2024<br>
+          </li>
+          <li align="justify">
             September 2023: Paper accepted at Psychology of Aesthetics, Creativity and the Arts<br>
           </li>
           <li align="justify">
@@ -192,7 +201,7 @@
           </li>
           <li align="justify">
             September 2022: Began my PhD at MPI for Biological Cybernetics<br>
-          </li>
+          <!--  </li>
           <li align="justify">
             August 2022: Attended and presented at VSAC 2022<br>
           </li>
@@ -213,7 +222,7 @@
           </li>
           <li align="justify">
             July 2021: Attended CogSci 2021<br>  
-          </li>
+          </li> -->
         </ul>
 
       </div>
