--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             September 2023: Attended and presented at IICCSSS, Tübingen<br>
           </li>
           <li align="justify">
-            June 2023: Attended and presented at Creativity and Cognition Conference<br>
+            June 2023: Presented at Creativity & Cognition Conference<br>
           </li>
           <li align="justify">
             June 2023: Attended and presented at UK Creativity Conference<br>
